Clean repository for production showcase
Removed unnecessary files:
- README_OLD.md (obsolete)
- INITIALIZATION_REPORT.md (internal doc)
- RELEASE_CHECKLIST.md (completed, not needed)
- scripts/debug_fusion.py (testing script)

Moved internal documentation:
- docs/AGENT.md → .github/internal-docs/
- docs/PROJECT_SPEC.md → .github/internal-docs/
- docs/START-PROMPT.md → .github/internal-docs/

Added professional GitHub templates:
- .github/CONTRIBUTING.md (contribution guidelines)
- .github/ISSUE_TEMPLATE/bug_report.md
- .github/ISSUE_TEMPLATE/feature_request.md
- .github/ISSUE_TEMPLATE/question.md

Updated .gitignore:
- Comprehensive Python/Jupyter patterns
- Dataset and embeddings excluded (large files)
- IDE and temp file patterns

Repository is now:
✅ Clean and professional
✅ GitHub showcase ready
✅ No testing/development artifacts
✅ Proper community templates
✅ Production-quality presentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,61 @@
+# Dataset (too large, user must download)
+data/Elliptic++ Dataset/
+
+# Generated embeddings (reproducible)
+data/embeddings.parquet
+
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
+*.class
 *.so
 .Python
-*.egg-info/
-dist/
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Jupyter
-.ipynb_checkpoints/
-*.ipynb_checkpoints
-
-# Data
-data/Elliptic++ Dataset/*.csv
-data/Elliptic++ Dataset/*.txt
-data/*.parquet
-data/*.npy
-
-# Models
-checkpoints/*.pt
-checkpoints/*.pth
-*.pkl
-
-# Logs
-*.log
-logs/
+# Virtual environments
+venv/
+ENV/
+env/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-
-# OS
+*~
 .DS_Store
-Thumbs.db
 
-# Environment
-.env
-venv/
-env/
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb_checkpoints
+
+# Model checkpoints (large files)
+*.pth
+*.pt
+*.ckpt
+
+# Logs
+*.log
+logs/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Internal development docs (moved to .github)
+.github/internal-docs/
